Erro ortografia corrigido

--- a/primeira_pagina.html
+++ b/primeira_pagina.html
@@ -79,27 +79,27 @@
                 padding-bottom: 50px;
             }
 
-            .portifolio {
+            .portfolio {
                 width: 1200px;
                 height: 100%;
                 margin: 0 auto;
             }
 
-            .portifolio-title {
+            .portfolio-title {
                 font-size: 45px;
                 text-transform: uppercase;
                 text-align: center;
                 color: #2c3e50;
             }
 
-            .portifolio-container {
+            .portfolio-container {
                 display: flex;
                 justify-content: center;
                 flex-wrap: wrap;
                 
             }
 
-            .portifolio-container img {
+            .portfolio-container img {
                 width: 330px;
                 height: 240px;
                 margin: 20px;
@@ -116,7 +116,7 @@
                 <a href="#" class="navbar-brand" >Marcelo P B da Silva</a>
 
                 <ul class="menu-items">
-                    <li><a href="#">Portifolio</a></li>
+                    <li><a href="#">Portfolio</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
@@ -131,9 +131,9 @@
             </div>
         </section>
 
-        <section class="portifolio">
-            <h1 class="portifolio-title">Portifolio</h1>
-            <div class="portifolio-container">
+        <section class="portfolio">
+            <h1 class="portfolio-title">Portfolio</h1>
+            <div class="portfolio-container">
                 <img src="images/portfolio1.png" alt="">
                 <img src="images/portfolio2.png " alt="">
                 <img src="images//portfolio3.png" alt="">
